@@ -1,6 +1,6 @@
 package net.zatrit.openmcskins.util;
 
-import net.zatrit.openmcskins.Hosts;
+import net.zatrit.openmcskins.HostType;
 import net.zatrit.openmcskins.OpenMCSkins;
 import net.zatrit.openmcskins.config.HostConfigItem;
 import net.zatrit.openmcskins.config.OpenMCSkinsConfig;
@@ -9,30 +9,30 @@ import org.jetbrains.annotations.NotNull;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 public final class ConfigUtil {
+    private ConfigUtil() {
+    }
+
     public static List<String> getHostsAsStrings(@NotNull OpenMCSkinsConfig config) {
-        return config.hosts.stream().map(x -> {
+        return config.hosts.stream().parallel().map(x -> {
             String type = x.type.toString().toLowerCase();
-            String[] values = x.value == null ? new String[]{type} : new String[]{type, x.value};
-            return String.join(": ", values);
-        }).toList();
+            return Objects.isNull(x.value) ? type : type + ": " + x.value;
+        }).collect(Collectors.toList());
     }
 
     public static List<HostConfigItem> getHostsFromStrings(@NotNull List<String> strings) {
-        return strings.stream().map(x -> {
+        return strings.stream().parallel().map(x -> {
             try {
-                String[] split = Arrays.stream(x.split(":")).map(String::trim).toArray(String[]::new);
+                String[] split = Arrays.stream(x.split(":")).parallel().map(String::trim).toArray(String[]::new);
                 String value = null;
                 if (split.length > 1) value = String.join(":", Arrays.copyOfRange(split, 1, split.length));
-                return new HostConfigItem(Hosts.valueOf(split[0].toUpperCase()), value);
+                return new HostConfigItem(HostType.valueOf(split[0].toUpperCase()), value);
             } catch (IllegalArgumentException e) {
                 OpenMCSkins.handleError(e);
                 return null;
             }
-        }).filter(Objects::nonNull).toList();
-    }
-
-    private ConfigUtil() {
+        }).filter(Objects::nonNull).collect(Collectors.toList());
     }
 }
